added support for sending emails

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 # Example environment variables for langchainjs
 GOOGLE_API_KEY=your_api_key_here
+
+# SMTP configuration for nodemailer
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_USER=your@email.com
+SMTP_PASS=yourpassword
+SMTP_FROM=your@email.com
